bitwarden/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bitwarden-ingress
spec:
  tls:
    - secretName: bitwarden-cert
  rules:
    - host: pass.sachiniyer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitwarden-bitwarden-k8s
                port:
                  number: 80
